[gd_scene load_steps=7 format=3 uid="uid://d1gxd1clf2qg6"]

[ext_resource type="Script" path="res://Scenes/Minis/ReturnToHome/ReturnToHomeLocator.gd" id="1_2fha8"]
[ext_resource type="PackedScene" uid="uid://bo1tr0fadvf6l" path="res://Scenes/UsableObject.tscn" id="2_6jbv4"]

[sub_resource type="CylinderMesh" id="CylinderMesh_j6gpu"]
lightmap_size_hint = Vector2i(17, 19)
cap_top = false
cap_bottom = false

[sub_resource type="Gradient" id="Gradient_b3qla"]
colors = PackedColorArray(0, 1, 0, 1, 0, 1, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_3o4uq"]
gradient = SubResource("Gradient_b3qla")
width = 3
height = 3
fill_from = Vector2(1, 1)
fill_to = Vector2(1, 0.836158)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_42i4l"]
transparency = 1
disable_fog = true
albedo_color = Color(0, 1, 0, 1)
albedo_texture = SubResource("GradientTexture2D_3o4uq")
heightmap_enabled = true
uv1_scale = Vector3(0.5, 0.5, 0.5)

[node name="ReturnToHomeLocator" type="Node3D"]
script = ExtResource("1_2fha8")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 3.01992e-07, 0, -1.50996e-07, -2, 0, 0, 0, 1, 0, 1.96473, 0)
mesh = SubResource("CylinderMesh_j6gpu")
surface_material_override/0 = SubResource("StandardMaterial3D_42i4l")

[node name="UsableObject" parent="." instance=ExtResource("2_6jbv4")]

[connection signal="on_object_use" from="UsableObject" to="." method="_on_usable_object_on_object_use"]
